websockets/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: websockets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: alkrauss48/websockets-backend:latest
        ports:
        - containerPort: 7070
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: websockets
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 7070
